k8s-mediaserver/transmission/transmission_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: k8smediaserver-sample
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-07-16T03:07:34Z"
  generation: 4
  labels:
    app.kubernetes.io/instance: k8smediaserver-sample
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-mediaserver
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: k8s-mediaserver-0.7.0
  name: transmission
  namespace: default
  ownerReferences:
  - apiVersion: charts.kubealex.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: K8SMediaserver
    name: k8smediaserver-sample
    uid: f52bdd6a-8840-4acc-9309-f004c4e68b14
  resourceVersion: "1008558"
  uid: fec848d3-ca33-4746-800b-7496ba627d55
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: transmission
            port:
              number: 9091
        path: /transmission
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 66.66.0.100
